--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "C_Cpp.errorSquiggles": "disabled"
+"C_Cpp.errorSquiggles": "disabled",
+"cSpell.words": [
+    "mulf",
+    "xform"
+],
+"files.associations": {
+    "*.rh": "c"
+}
 }
